# biomcp

./: .gitignore  .mcpbignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RUN.md  build.rs  codecov.yaml  dataset_evaluate.csv  design.md  docker-compose.yml  glama.json  lzyank.toml  manifest.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  smithery.yaml  tox.ini  wrangler.toml
.agents/skills/: README.md  adapt  agent-browser  animate  api-usability-review  audit  bolder  checkpoint  clarify  cli-design  cli-usability-review  colorize  create-ticket  critique  delight  extract  frontend-design  harden  issue-discovery  normalize  onboard  optimize  perf-review  plan  plan-frontier  polish  python-standards  quieter  rust-perf-review  rust-standards  security-review  shot-scraper  spec-writing  testing-mindset  web-ux-review  zig-perf-review  zig-standards
.climb/: design.md  dev-log.md  review.md  signoff.md
.climb-test-vault/: config.md  flows  models  roles
.cursor/: mcp.json
.cursor/rules/: table-formatting.mdc
.github/workflows/: ci.yml  deploy-docs.yml  main.yml  on-release-main.yml  release.yml  spec-smoke.yml
.march/: code-log.md  code-review-log.md
analysis/functional/: overview.md
analysis/technical/: overview.md  staging-demo.md
analysis/ux/: cli-reference.md
architecture/functional/: overview.md
architecture/technical/: overview.md  source-integration.md  staging-demo.md
architecture/ux/: cli-reference.md
benchmarks/bioasq/: README.md  ingest_public.py
demo/: README.md  streamable_http_client.py
design/functional/: overview.md
design/technical/: overview.md  source-integration.md  staging-demo.md
design/ux/: cli-reference.md
docs/: changelog.md  cloudflare-worker-deployment.md  contributing.md  genomoncology.md  getting_started.md  index.md  install.sh  installation.md  mcp_integration.md  policies.md  python_sdk.md  server_protocol.md  troubleshooting.md  workflows.md
docs/apis/: clinicaltrials_gov.md  myvariant_info.md  pubtator3_api.md
docs/assets/: mcp_architecture.txt
docs/blog/: ai-assisted-clinical-trial-search-analysis.md  biomcp-charts.md  biomcp-kuva-charts.md  biomcp-pubmed-articles.md  cbioportal-study-analytics.md  kuva-charting-guide.md  researcher-persona-resource.md  skillbench-biomcp-skills.md  we-deleted-35-tools.md  what-is-biomcp.md
docs/charts/: bar.md  box.md  density.md  heatmap.md  histogram.md  index.md  pie.md  ridgeline.md  scatter.md  stacked-bar.md  survival.md  violin.md  waterfall.md
docs/cli/: articles.md  health.md  trials.md  variants.md
docs/concepts/: what-is-biomcp.md
docs/getting-started/: api-keys.md  claude-desktop.md  first-query.md  installation.md  remote-http.md  skills.md
docs/how-to/: annotate-variants.md  cross-entity-pivots.md  find-articles.md  find-trials.md  guide-workflows.md  predict-effects.md  reproduce-papers.md  search-all-workflow.md  skill-validation.md
docs/reference/: benchmarks.md  bioasq-benchmark.md  civic-sections.md  data-sources.md  dependencies.md  drug-approvals-and-ae-summary.md  error-codes.md  faq.md  mcp-server.md  quick-reference.md  source-licensing.md  source-versioning.md  sources.json
docs/sources/: cbioportal.md  chembl.md  civic.md  clinicaltrials-gov.md  clinvar.md  ema.md  gnomad.md  human-protein-atlas.md  index.md  kegg.md  monarch-initiative.md  oncokb.md  openfda.md  opentargets.md  pharmgkb.md  pubmed.md  reactome.md  semantic-scholar.md  uniprot.md
docs/troubleshooting/: macos.md
docs/tutorials/: claude-desktop.md  cursor-ide.md  mcp-client.md  mcp-inspector.md  python-sdk.md  stytch_oauth_setup.md
docs/user-guide/: adverse-event.md  article.md  cli-reference.md  discover.md  disease.md  drug.md  (+8 more)
example_scripts/: mcp_integration.py  python_sdk.py
examples/: README.md
paper/: README.md
presentations/: app.py  decks.py
scripts/: README.md  check-no-climb-tracked.sh  check-version-sync.sh  contract-smoke.sh  geneagent-demo.sh  genegpt-demo.sh  langchain_client.py  langchain_client2.py  mcp_integration.py  pubmed_qa.py  python_sdk.py  source-contracts.md  validate-skills.sh
skills/: SKILL.md  jq-examples.md
spec/: 01-overview.md  02-gene.md  03-variant.md  04-trial.md  05-drug.md  06-article.md  07-disease.md  08-pgx.md  09-search-all.md  10-workflows.md  11-evidence-urls.md  12-search-positionals.md  13-study.md  14-pathway.md  15-mcp-runtime.md  16-protein.md  17-cross-entity-pivots.md  17-guide-workflows.md  18-source-labels.md  19-discover.md  20-alias-fallback.md  21-cross-entity-see-also.md  22-cache.md  conftest.py
src/: __init__.py  lib.rs  main.rs  server.py  test_support.rs
templates/: adverse_event.md.j2  article.md.j2  article_search.md.j2  device_event.md.j2  discover.md.j2  disease.md.j2  disease_search.md.j2  drug.md.j2  drug_search.md.j2  gene.md.j2  pathway.md.j2  pathway_search.md.j2  pgx.md.j2  protein.md.j2  search_all.md.j2  trial.md.j2  trial_search.md.j2  variant.md.j2  variant_search.md.j2
tests/: article_usage_stderr.rs  cache_clear.rs  conftest.py  ema_auto_sync.rs  legacy_cache_helper_cleanup.rs  pty_helpers.rs  retry_stderr.rs  test_bioasq_benchmark_contract.py  test_bioasq_ingest.py  test_citation_contract.py  test_directory_submission_contract.py  test_docs_changelog_refresh.py  test_documentation_consistency_audit_contract.py  test_mcp_contract.py  test_mcp_http_surface.py  test_mcp_http_transport.py  test_no_climb_tracked_script.py  test_paper_package_contract.py  test_public_install_docs_contract.py  test_public_landing_copy_docs_contract.py  test_public_search_all_docs_contract.py  test_public_skill_docs_contract.py  test_quality_ratchet_contract.py  test_source_licensing_docs_contract.py  test_source_pages_docs_contract.py  test_streamable_http_demo.py  test_upstream_planning_analysis_docs.py  test_version_sync_script.py
tools/: check-mcp-allowlist.py  check-quality-ratchet.py  check-quality-ratchet.sh  check-source-registry.py
(+246 files in other folders)
