[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "biomcp-cli"
version = "0.8.13"
description = "Biomedical MCP CLI - query genes, variants, trials, articles, drugs, diseases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bioinformatics", "mcp", "genomics", "clinical-trials", "pubmed"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://biomcp.org"
Repository = "https://github.com/genomoncology/biomcp"
Documentation = "https://biomcp.org"

[project.optional-dependencies]
dev = [
  "jsonschema>=4.26",
  "mcp>=1.0.0",
  "mustmatch>=0.0.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-timeout>=2.3",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0",
]

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
